@startuml

' Define pacotes
package "Pacote de Usuários" {
  class Usuario
  class Cliente
  class Agente
  class Banco
}

package "Pacote de Aluguel" {
  class PedidoAluguel
  class Automovel
  class ContratoCredito
}

Usuario <|-- Cliente
Usuario <|-- Agente
Cliente --> PedidoAluguel : "gerencia"
Agente --> PedidoAluguel : "analisando"
Agente --> Automovel : "registrando"
Banco --> ContratoCredito : "associando"

@enduml
